--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@infinibay/infinivirt",
+  "name": "@infinibay/infinization",
   "version": "0.1.0",
   "description": "Custom virtualization solution for managing QEMU VMs",
   "main": "dist/index.js",
